# watchtower

./: .gitignore  README.md  SECURITY.md  databricks.yml  pyproject.toml
dashboards/: watchtower.lvdash.json
notebooks/: demo_etl.ipynb  dlt_pipeline.ipynb
resources/: demo.job.yml  watchtower.dashboard.yml  watchtower.demo.job.yml  watchtower.pipeline.yml
scripts/: cleanup.sh  deploy.sh
src/watchtower/: __init__.py  log_ingest_pipeline.py
terraform/: main.tf  providers.tf  variables.tf
terraform/init-scripts/: configure_log4j.sh
tests/: it_log_ingest.py
tests/data/cluster-logs/ 0713-210012-gaehahyy/driver/: stderr  stdout
tests/notebooks/: demo_etl.py  setup_test_data.py
tools/: .bandit  .coveragerc  .pylintrc  .sqlfluff  mypy.ini  pytest.ini  ruff.toml
